--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "express.js": "^1.0.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "pdf-parse": "^1.1.1"
   }
 }
