--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "debug": "^4.3.2",
     "dotenv": "^10.0.0",
+    "express-fileupload": "^1.2.1",
     "express.js": "^1.0.0",
     "mysql": "^2.18.1",
     "pdf-parse": "^1.1.1"
